# bio-kernel

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  biokernel.mod.c  build-release-meson.sh  fuse.c  fuse.h  lsb.c  main_bio-kerneld.c  main_lsb.c  main_rmtax.c  meson.build  meson.build.merge  rmtax.c  tax.h  utils.c  utils.h
bio-kerneld/: build-release-meson.sh  main.c
biokernel.mod/: Makefile  biokernel.mod.c
db/taxons/: .gitignore  taxons  taxons.example  update-taxons.py
src/lib/: db.c  db.h  tax.c  tax.h  utils.c  utils.h
src/modules/: super.c
tests/: test_taxons.c
utils/: README.txt  build-release-meson.sh  config.h.in  main_bio.c  main_chref.c  main_chtax.c  main_lsb.c  main_rmtax.c  make-tidy.sh  meson.build  ref.h  refbuild.h  service_index_taxons.c  tax.c  tax.h  utils.c
